More contrast theme fixes

--- a/frontend/src/theme-contrast.scss
+++ b/frontend/src/theme-contrast.scss
@@ -101,71 +101,10 @@ $dropdown-link-active-bg: $active-bg;
   --tooltip-grey: #b1b1b1;
 }
 
-html, body {
-  height: 100%;
-}
-
 body {
   background-color: var(--active-bg);
   min-width: 375px;
   padding-bottom: 60px;
-}
-
-.container {
-  position: relative;
-}
-
-main {
-  margin-top: 24px;
-}
-
-.full-height {
-  @media (max-width: 767.98px) {
-    min-height: 100vh;
-  }
-}
-
-:focus {
-  outline: none !important;
-}
-
-.box {
-  min-height: 1px;
-  padding: 1.25rem;
-  position: relative;
-  min-width: 0;
-  word-wrap: break-word;
-  background-color: var(--box-bg);
-  background-clip: border-box;
-  border: 1px solid rgba(0,0,0,.125);
-  box-shadow: 0.125rem 0.125rem 0.25rem rgba(0,0,0,0.075);
-}
-
-.preview-box {
-  min-height: 520px;
-  padding: 1rem 3rem 1.5rem;
-}
-
-@media (max-width: 767.98px) {
-  .box {
-    padding: 0.75rem;
-  }
-}
-
-.navbar-nav.liquid > .active {
-  background-color: var(--liquid) !important;
-}
-
-.navbar-nav.testnet > .active {
-  background-color: var(--testnet) !important;
-}
-
-.navbar-nav.signet > .active {
-  background-color: var(--signet) !important;
-}
-
-.navbar-nav.liquidtestnet > .active {
-  background-color: var(--liquidtestnet) !important;
 }
 
 .form-control {
@@ -210,124 +149,6 @@ main {
 }
 .form-control.form-control-secondary:focus {
   color: var(--fg);
-}
-
-.h2-match-table {
-  padding-left: .65rem;
-}
-
-.skeleton-loader {
-  box-sizing: border-box;
-  /**
-  * `overflow` and `position` are required steps to make sure
-  * the component respects the specified dimensions
-  * given via `theme` object @Input attribute
-  */
-  overflow: hidden;
-  position: relative;
-
-  animation: progress 2s ease-in-out infinite;
-  background: #2e324e no-repeat;
-  background-image: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 0),
-    #5d6182,
-    rgba(255, 255, 255, 0)
-  );
-  background-size: 200px 100%;
-  border-radius: 4px;
-  width: 100%;
-  height: 14px;
-  display: inline-block;
-
-  &:after,
-  &:before {
-    box-sizing: border-box;
-  }
-
-  &.circle {
-    width: 40px;
-    height: 40px;
-    margin: 5px;
-    border-radius: 50%;
-  }
-}
-
-@keyframes progress {
-  0% {
-    background-position: -200px 0;
-  }
-  100% {
-    background-position: calc(200px + 100%) 0;
-  }
-}
-
-.symbol {
-	color: var(--transparent-fg);
-	font-size: 12px;
-}
-
-.progress-text {
-  span {
-    color: var(--fg) !important;
-  }
-}
-
-.block-size, .blocks-container {
-  .symbol {
-    font-size: 16px;
-    color: var(--fg) !important;
-  }
-}
-
-.break-all {
-  white-space: normal;
-  word-break: break-all;
-}
-
-.title-block {
-  color: var(--fg);
-  padding-top: 20px;
-  padding-bottom: 10px;
-  border-top: 3px solid var(--fg);
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.title-address, .title-asset {
-  color: var(--fg);
-  padding-bottom: 10px;
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 7px;
-  @media (min-width: 576px) {
-    flex-direction: row;
-    margin-bottom: 0px;
-  }
-  h1 {
-    line-height: 1;
-  }
-}
-
-.smaller-text {
-  font-size: 14px;
-}
-
-.nowrap {
-  white-space: nowrap;
-}
-
-.table-xs th, .table-xs td {
-  padding: 0.1rem;
-}
-
-.table {
-  margin-bottom: 0;
-  font-size: 0.9rem;
-  @media (min-width: 576px) {
-    font-size: 1rem;
-  }
 }
 
 .table-fixed {
